Updated Report - Completed Chapter 3

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -435,9 +435,32 @@ and Khatib, Oussama},
 }
 
 @phdthesis{karthikmunirathinam,
-  title               = {{Different approaches in dynamic motion imitation from human being to a humanoid robot}},
-  author              = {Karthick Munirathinam, Sophie Sakka},
-  school              = {{Ecole Centrale de Nantes}},
-  year                = {2016},
-  type                = {Theses},
+  title  = {{Different approaches in dynamic motion imitation from human being to a humanoid robot}},
+  author = {Karthick Munirathinam, Sophie Sakka},
+  school = {{Ecole Centrale de Nantes}},
+  year   = {2016},
+  type   = {Theses}
+}
+
+@electronic{aldebaran-masses,
+  author = {NAO Aldebaran Robotics},
+  title  = {Masses, Centre of Masses and Inertial Matrix for NAO v5 H25},
+  url    = {http://doc.aldebaran.com/2-1/family/robots/masses_robot.html}
+}
+
+@article{pierro2012stabilizer,
+  title  = {Stabilizer architecture for humanoid robots collaborating with humans},
+  author = {Pierro, Paolo},
+  year   = {2012}
+}
+
+@article{van1985method,
+  title     = {On the method of weighting for equality-constrained least-squares problems},
+  author    = {Van Loan, Charles},
+  journal   = {SIAM Journal on Numerical Analysis},
+  volume    = {22},
+  number    = {5},
+  pages     = {851--864},
+  year      = {1985},
+  publisher = {SIAM}
 }
