--- a/report/report.tex
+++ b/report/report.tex
@@ -55,6 +55,7 @@ this report. This accomplishment would not have been possible without them.
     \begin{tabular}{p{3cm}p{10cm}}
         $x$ & Pose State Vector \\
         $q$ & Joint State Vector \\
+        $r_i$ & position vector of body $i$ \\
         $m_i$ & mass of body $i$ \\
         $M$ & Total mass of the robot \\
         $\dot{q}$ & Joint Velocity Vector \\
@@ -69,7 +70,13 @@ this report. This accomplishment would not have been possible without them.
         $P_{CoM}$ & Position of CoM of the robot \\
         $P_{CoM_i}$ & Position of CoM of body $i$ \\
         $P_{ZMP}$ & Position of ZMP \\
-         & \\
+
+        & \\
+
+        $\mathcal{F}_i$ & Frame representation of body $i$ respecting M-DH \\
+        $\mathcal{R}_i$ & Local coordinate system of body $i$ \\
+        
+        & \\
         
 
 
