Updated Report - Completed Chapter 4

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -464,3 +464,9 @@ and Khatib, Oussama},
   year      = {1985},
   publisher = {SIAM}
 }
+
+@electronic{github,
+  author = {H S Selvakumar},
+  title  = {NAO Dynamics Motion Retargetting - nao-dynamics-imitation},
+  url    = {https://github.com/franklinselva/nao-dynamics-imitation}
+}
