--- a/report/dynamcis_based_imitation.tex
+++ b/report/dynamcis_based_imitation.tex
@@ -162,7 +162,7 @@ and the translation can be computed by \cite{karthikmunirathinam},
 \end{align}
 
 
-Once the frames are transformed to the respective notation, recursive Newton-Euler formalism of dynamic equation from section \ref{rigid-body-dynamicsdra}
+Once the frames are transformed to the respective notation, recursive Newton-Euler formalism of dynamic equation from section \ref{rigid-body-dynamics}
 can be used to formulate the dynamic model of the equations.
 
 \subsection{Centroidal dynamics of humanoid robot}
