--- a/report/thesisfront.tex
+++ b/report/thesisfront.tex
@@ -44,7 +44,7 @@
 \begin{tabular}{p{3cm}p{5cm}p{7cm} }
  % President: & Name & Position (Institution) \\ & & \\     % for final defense only (not bibliography)
  Evaluators: & Dr. Olivier Kermognant & Assistant Professor (LS2N, ECN) \\
-% 	      & Name & Position (Institution) \\ 
+	      & Dr. Christine Chevallereau & Position (Institution) \\ 
 % 	      & Name & Position (Institution) \\ & & \\  & & \\ 
   Supervisor(s):  & Dr. Sophie Sakka & Assistant Professor (LS2N, ECN) \\
 % EMARO students only
