Updated Report - Completed Chapter 4

--- a/report/report.tex
+++ b/report/report.tex
@@ -109,6 +109,7 @@ OSID & Operational Space Inverse Dynamics \\
  \include{introduction.tex}
 \include{state_of_the_art.tex}
 \include{dynamcis_based_imitation.tex}
+\include{experimental_setup.tex}
 \include{implementation.tex}
  
  
