Updated Report - Added new Chapter 4

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -470,3 +470,23 @@ and Khatib, Oussama},
   title  = {NAO Dynamics Motion Retargetting - nao-dynamics-imitation},
   url    = {https://github.com/franklinselva/nao-dynamics-imitation}
 }
+
+@article{escande2014hierarchical,
+  title     = {Hierarchical quadratic programming: Fast online humanoid-robot motion generation},
+  author    = {Escande, Adrien and Mansard, Nicolas and Wieber, Pierre-Brice},
+  journal   = {The International Journal of Robotics Research},
+  volume    = {33},
+  number    = {7},
+  pages     = {1006--1028},
+  year      = {2014},
+  publisher = {SAGE Publications Sage UK: London, England}
+}
+
+@inproceedings{escande2010fast,
+  title        = {Fast resolution of hierarchized inverse kinematics with inequality constraints},
+  author       = {Escande, Adrien and Mansard, Nicolas and Wieber, Pierre-Brice},
+  booktitle    = {2010 IEEE International Conference on Robotics and Automation},
+  pages        = {3733--3738},
+  year         = {2010},
+  organization = {IEEE}
+}
