--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -1,1 +1,9 @@
 \chapter{Implementation}
+
+This
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.55]{images/flowchart-block-diagram.png}\hfill
+    \caption{Work flow representation of Imitation Program}\hfill
+    \label{fig: block-diagram}
+\end{figure}
